<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_1"
    tools:context="com.example.kasparasza.runningtrackerapp.UpdateDb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter_details_header_text" />

    <!-- date of exercise -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_2"
            android:text="@string/Select_training_date" />

        <TextView
            android:id="@+id/date_input_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2017-07-29" />
    </LinearLayout>

    <!-- type of exercise -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_2"
            android:text="@string/Select_training_type" />

        <Spinner
            android:id="@+id/run_type_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown">
        </Spinner>

    </LinearLayout>

    <!-- distance of exercise -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_view_width_1"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_2"
            android:text="@string/Main_distance_ran" />

        <EditText
            android:id="@+id/distance_input"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kilometers" />
    </LinearLayout>

    <!-- duration of exercise -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_view_width_1"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_2"
            android:text="@string/Duration_of_main_run" />

        <EditText
            android:id="@+id/duration_input"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hours" />
    </LinearLayout>

    <!-- number of repeats -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_view_width_1"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_2"
            android:text="@string/Number_of_repeats" />

        <EditText
            android:id="@+id/repeats_input"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number" />
    </LinearLayout>

    <!-- distance of each break -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/text_view_width_1"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_2"
            android:text="@string/Distance_of_break" />

        <EditText
            android:id="@+id/break_length_input"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kilometers" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_2"
        android:text="@string/Button_text_confirm" />

</LinearLayout>
